moved pseudo code, added H1 with game name to populate on screen.

--- a/index.html
+++ b/index.html
@@ -1,33 +1,3 @@
-//DONT FORGET TO LINK TO PORTFOLIO
-
-//Display game name and instructions to player
-
-//Display Random number generated
-
-//Display number of wins and loses
-
-//Display four crystals as buttons on the page. 
-
-
-//The random number displayed should be 19-120
-
-//This random number should be changed every turn
-
-
-//Make each crystal worth a specific amount of points
-
-//Make the point value for each chrystal change every time.
-
-//Point values for chrystals are between 1-12
-
-//Add the chosen chrystal value to the total score
-
-//If total score is over random number generated, add one loss to loses.
-
-//If total score is equal to random number generated, add one win to wins.
-
-//If over or equal to, reset game. New random number generated, new values for each chrystal. 
-
 <!DOCTYPE html>
 <html class="no-js">
     <head>
@@ -43,6 +13,12 @@
 
     </head>
     <body>
+        <div class="container">
+            <div class="row">
+        <h1>Crystal Collector!</h1>
+        </div>
+        </div>
+        
 
         <script src="" async defer></script>
     </body>
