--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         </div>
         
 
-        <script src="" async defer></script>
+        <script src="assets/javascript/game.js" async defer></script>
     </body>
 </html>
