--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
         <h1>Crystal Collector!</h1>
         </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <p>You will be given a random number at the start of the game.</p>
+                <p>There are four crystals below. By clicking on a crystal, you will add a specific amount of points to your total score.</p>
+                <p>You win the game by matching your total score to the random number generated, and lose the game if your total goes above the random number generated.</p>
+                <p>The value of each crystal is hidden from you until you click on it.
+                </p>
+                <p>Each time when the game starts, the game will change the values of each crystal.</p>
+            </div>
+        </div>
         
 
         <script src="assets/javascript/game.js" async defer></script>
