Added correct crystals to each button. Tried to create space for Random Number and Wins/Loses but not succesful in creating actual space yet.

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
                 </div>
                 <div class="col-3">
                         <button class="btn btn-default">
-                                <img src="assets/images/Green Crystal.png" width="150" height="150">
+                                <img src="assets/images/Pink Crystal.png" width="150" height="150">
                               </button>
                 </div>
                 <div class="col-3">
                         <button class="btn btn-default">
-                                <img src="assets/images/Green Crystal.png" width="150" height="150">
+                                <img src="assets/images/Red Crystal.png" width="150" height="150">
                               </button>
                 </div>
                 <div class="col-3">
                         <button class="btn btn-default">
-                                <img src="assets/images/Green Crystal.png" width="150" height="150">
+                                <img src="assets/images/White Crystal.png" width="150" height="150">
                               </button>
                 </div>
             </div>
