--- a/index.html
+++ b/index.html
@@ -33,10 +33,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-8">
+                    <div class="text-center">
                     <h2>Random Number Generated!</h2>
+                    </div>
                 </div>
                 <div class="col-4">
+                    <div class="text-center">
                     <h2>Wins and Loses</h2>
+                    </div>
+                    <div class="row">
+                        <div class="col"><div class="text-center"><h3>Wins:</h3></div></div>
+                        <br>
+                        <div class="col"><div class="text-center"><h3>Loses:</h3></div></div>
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
