Created card for random generated number and created id 'random-number' to populate in the card body.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     </head>
     <body>
+
+<!-- Title and Instructions -->
+
         <div class="container">
             <div class="row">
         <h1>Crystal Collector!</h1>
@@ -30,13 +33,19 @@
             </div>
         </div>
 
+<!-- Random Number Generated and Wins and Loses -->
+
         <div class="container">
             <div class="row">
                 <div class="col-8">
-                    <div class="text-center">
-                    <h2>Random Number Generated!</h2>
+                    <div class="card">
+                        <h3 class="card-header">Random Generated Number!</h3>
+                    <div class="card-body">
+                    <h1 id="random-number"></h1>
                     </div>
                 </div>
+            </div>
+
                 <div class="col-4">
                     <div class="text-center">
                     <h2>Wins and Loses</h2>
@@ -50,6 +59,8 @@
                 </div>
             </div>
         </div>
+
+<!-- Crystal Buttons -->
 
         <div class="container">
             <div class="row">
@@ -76,6 +87,8 @@
             </div>
         </div>
 
-        <script src="assets/javascript/game.js" async defer></script>
+        <script src="assets/javascript/game.js" async defer>
+        
+        </script>
     </body>
 </html>
