created varaible to hold random number generated

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="card">
                         <h3 class="card-header">Random Generated Number!</h3>
                     <div class="card-body">
-                    <h1 id="random-number"></h1>
+                    <h1 id="randomNumber"></h1>
                     </div>
                 </div>
             </div>
@@ -94,10 +94,18 @@
         <script src="assets/javascript/game.js" async defer>
 
 // Create variables for buttons
-var greenCrystal
-var pinkCrystal
-var redCrystal
-var whiteCrystal
+var greenCrystal = 0
+var pinkCrystal = 0
+var redCrystal = 0
+var whiteCrystal = 0
+
+//Create variables for random number generated
+var randomNumber = "";
+
+
+
+
+
         
         </script>
     </body>
