--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Crystal Collector</title>
-        <meta name="description" content="">
+
+<!-- jQuery Library Link -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- CSS Reset Link -->
         <link rel="reset" href="assets/css/reset.css">
+        
+<!-- Bootstrap Link -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<!-- CSS Style Sheet Link -->
         <link rel="stylesheet" href="assets/css/style.css">
         
 
@@ -91,8 +99,10 @@
 
 <!-- Player Total Score -->
 
-        <script src="assets/javascript/game.js" async defer>
-
+<script type="text/javascript">
+  $(document).ready(function() {
+    console.log( "ready!" );
+});
 // Create variables for buttons
 var greenCrystal = 0
 var pinkCrystal = 0
@@ -103,6 +113,8 @@ var whiteCrystal = 0
 var randomNumber = "";
 
 
+
+//Initiating a loop to generate 
 
 
 
