--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="card">
                         <h3 class="card-header">Random Generated Number!</h3>
                     <div class="card-body">
-                    <h1 id="randomNumber"></h1>
+                    <h1 id="random-number"></h1>
                     </div>
                 </div>
             </div>
@@ -101,7 +101,8 @@
 
 <script type="text/javascript">
   $(document).ready(function() {
-    console.log( "ready!" );
+    var randomNumber = Math.floor((Math.random() * 120) +19);
+    console.log(randomNumber)
 });
 // Create variables for buttons
 var greenCrystal = 0
