Got random number between 19-120 to generate in the random generated number box. Connected the function to the random-number id and assigned randomNumber varaible to that id in the html.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <script type="text/javascript">
   $(document).ready(function() {
     var randomNumber = Math.floor((Math.random() * 120) +19);
-    console.log(randomNumber)
+    document.getElementById("random-number").innerHTML = randomNumber;
 });
 // Create variables for buttons
 var greenCrystal = 0
