began creating the function to generate an array of random values to be randomly assigned to each button.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,20 @@
  $(document).ready(function() {
     var randomNumber = Math.floor((Math.random() * 120) +19);
     document.getElementById("random-number").innerHTML = randomNumber;
+
+
 });
+
+//Create function to generate random values to assign to each button
+function generateOptions() {
+    //Variable to hold randomValues array
+    var randomValues = [];
+    //Generate 4 random values in the 1-12 range
+
+}
+
+
+
 
 //Variables created to hold number of wins and loses
 var wins
