Created another variable for the assignedValue that will be chosen from the randomValues array. Trying to create a while loop to generate random number between 1 and 12.

--- a/index.html
+++ b/index.html
@@ -113,8 +113,12 @@
 function generateOptions() {
     //Variable to hold randomValues array
     var randomValues = [];
+    var assignedValue;
     //Generate 4 random values in the 1-12 range
+    while(randomValues.length < 4) {
+        assignedValue = Math.floor(Math.random() * 12) + 1;
 
+    }
 }
 
 
