created id's for the buttons. Named after color of crystal

--- a/index.html
+++ b/index.html
@@ -75,22 +75,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-3">
-                        <button class="btn btn-default">
+                        <button class="btn btn-default" id="green">
                                 <img src="assets/images/Green Crystal.png" width="150" height="150" alt="Green Crystal">
                               </button>
                 </div>
                 <div class="col-3">
-                        <button class="btn btn-default">
+                        <button class="btn btn-default" id="pink">
                                 <img src="assets/images/Pink Crystal.png" width="150" height="150" alt="Pink Crystal">
                               </button>
                 </div>
                 <div class="col-3">
-                        <button class="btn btn-default">
+                        <button class="btn btn-default" id="red">
                                 <img src="assets/images/Red Crystal.png" width="150" height="150" alt="Red Crystal">
                               </button>
                 </div>
                 <div class="col-3">
-                        <button class="btn btn-default">
+                        <button class="btn btn-default" id="white">
                                 <img src="assets/images/White Crystal.png" width="150" height="150" alt="White Crystal">
                               </button>
                 </div>
@@ -124,8 +124,9 @@ function generateOptions() {
       if (randomValues.indexOf(assignedValue) < 0) {
           randomValues.push(assignedValue);
       }  
-
     }
+
+
 }
 
 
