Created another varaible called isScorfeEqual to store if the score is equal to help determine win or continuation of the game. Initially set to false.

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     var white = 0;
     var isScoreOver = false;
     var isScoreUnder = true;
+    var isScoreEqual = false;
     
     var randomNumber = Math.floor((Math.random() * 120) +19);
     document.getElementById("random-number").innerHTML = randomNumber;
