--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 
                 <div class="col-8">
                     <div class="card">
-                        <h3 class="card-header">Random Generated Number!</h3>
+                        <h3 class="card-header">Random Number!</h3>
                     <div class="card-body">
                     <h1 id="random-number"></h1>
                     </div>
@@ -98,6 +98,19 @@
         </div>
 
 <!-- Player Total Score -->
+
+        <div class="container">
+            <div class="row">
+                    <div class="col-8">
+                            <div class="card">
+                                <h3 class="card-header">Your Score!</h3>
+                            <div class="card-body">
+                            <h1 id="player-score"></h1>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
 
 <script type="text/javascript">
  
@@ -149,7 +162,10 @@ $(function() {
     $("#red").val(setup.options[3]);
     $("#white").val(setup.options[4]);
 
-    
+    //Test to see if the buttons are generating numbers between 1-12
+    $("button.green").live("click", function() {  
+        alert(1);
+    });
 }
 
 
