added variable for userScore

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     var isScoreOver = false;
     var isScoreUnder = true;
     var isScoreEqual = false;
+    var userScore = 0;
     
     var randomNumber = Math.floor((Math.random() * 120) +19);
     document.getElementById("random-number").innerHTML = randomNumber;
