created varaible to generate random number between 19 and 120

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
         </div>
 
 <script type="text/javascript">
- 
+ //Create varaible for randomNumber to be displayed
+ var randomNumber = Math.floor((Math.random()*120)+19);
         </script>
     </body>
 </html>
@@ -144,7 +145,7 @@
 
 
 
- //  //Created function to generate random number and display it on document load.
+ <!-- //  //Created function to generate random number and display it on document load.
 //  $(document).ready(function() {
 
 // //Create variables for crystal buttons to the runtime of our application
@@ -204,7 +205,7 @@
 // // });
 
 // // }
-// );
+// ); -->
 
 
 
