--- a/index.html
+++ b/index.html
@@ -110,8 +110,15 @@
         </div>
 
 <script type="text/javascript">
- //Create varaible for randomNumber to be displayed
- var randomNumber = Math.floor((Math.random()*120)+19);
+//CODE FOR RANDOM NUMBER GENERATOR / DISPLAY
+
+//Created varaible for randomNumber to be displayed
+var randomNumber = Math.floor((Math.random()*120)+19);
+
+//Attached the randomNumber variable generated previously to the respective id in the random number generated card in order to display the integer.
+document.getElementById("random-number").innerHTML = randomNumber;
+
+
         </script>
     </body>
 </html>
