Created array to hold all potential crystal values.

--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@ var randomNumber = Math.floor((Math.random()*120)+19);
 //Attached the randomNumber variable generated previously to the respective id in the random number generated card in order to display the integer.
 document.getElementById("random-number").innerHTML = randomNumber;
 
+//CODE FOR CRYSTALS AND THEYRE VALUES
+
+//Created array to hold all potential crystal values.
+var randomValues = [];
 
         </script>
     </body>
