Created variable for each value within the array.

--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@ document.getElementById("random-number").innerHTML = randomNumber;
 
 //Created array to hold all potential crystal values.
 var randomValues = [];
+//Created variable for each value within the array.
+var crystalValue;
 
         </script>
     </body>
