Created while loop to generate 4 random values, as long as the array is under 4 values, and made these values set to be between 1 and 12.

--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@ document.getElementById("random-number").innerHTML = randomNumber;
 var randomValues = [];
 //Created variable for each value within the array.
 var crystalValue;
+//Created while loop to generate 4 random values, as long as the array is under 4 values, and made these values set to be between 1 and 12. 
+while (randomValues.length < 4) {
+    crystalValue = Math.floor(Math.random()*12) +1;
+
+
+}
 
         </script>
     </body>
