Git Hub is having issues. trying to see why website is not launching. Last commit should have been in reference to the while loop created.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 <script type="text/javascript">
 //CODE FOR RANDOM NUMBER GENERATOR / DISPLAY
-
+$(document).ready(function() {
 //Created varaible for randomNumber to be displayed
 var randomNumber = Math.floor((Math.random()*120)+19);
 
@@ -130,7 +130,7 @@ while (randomValues.length < 4) {
 
 
 }
-
+});
         </script>
     </body>
 </html>
