--- a/index.html
+++ b/index.html
@@ -127,9 +127,12 @@ var crystalValue;
 //Created while loop to generate 4 random values, as long as the array is under 4 values, and made these values set to be between 1 and 12. 
 while (randomValues.length < 4) {
     crystalValue = Math.floor(Math.random()*12) +1;
-
-
+//Created if loop to avoid duplicates. And push values into the array.
+if (randomValues.indexOf(crystalValue) < 0) {
+    randomValues.push(crystalValue)
+    }
 }
+
 });
         </script>
     </body>
