SUCCESSFULLY CONSOLE LOGGED the array of 4 random values to be assigned to each crystalgit add .! This was the main reason for starting from scratch. Strides have been made.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ if (randomValues.indexOf(crystalValue) < 0) {
     randomValues.push(crystalValue)
     }
 }
-
+console.log(randomValues)
 });
         </script>
     </body>
