Created variable for each button, and set each variable to create an image of the respective crystal. Took away the links in the buttons, but will reference each button and append with the id of that button.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,13 @@ if (randomValues.indexOf(crystalValue) < 0) {
     randomValues.push(crystalValue)
     }
 }
-//
+//Created variable for each button, and set each variable to create an image of the respective crystal. Took away the links in the buttons, but will reference each button and append with the id of that button.
+    var green = $("<img>");
+    var pink = $("<img>");
+    var red = $("<img>");
+    var white = $("<img>");
+
+
 console.log(randomValues)
 });
         </script>
