previously was going to have each variable create its own crystal image. instead, we will make each variabe for each crystal reference the respective button id within the html. That way, the changes we make to the varaible are displayed through the id, that already has the correct image associated with it.

--- a/index.html
+++ b/index.html
@@ -136,10 +136,12 @@ if (randomValues.indexOf(crystalValue) < 0) {
     }
 }
 //Created variable for each button, and set each variable to create an image of the respective crystal. Took away the links in the buttons, but will reference each button and append with the id of that button.
-    var green = $("<img>");
-    var pink = $("<img>");
-    var red = $("<img>");
-    var white = $("<img>");
+    var green = $(".green");
+    var pink = $(".pink");
+    var red = $(".red");
+    var white = $(".white");
+//Was going to create for loop, but since each image and crystal are different, I will assign each individual variable its on individual index.
+
 
 
 console.log(randomValues)
