Was going to create for loop, but since each image and crystal are different, I will assign each individual variable its on individual index. No need to assign class to each variable, since the id for each one is attached to the already existing default bootstrap button class btn btn-default.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@ if (randomValues.indexOf(crystalValue) < 0) {
     var pink = $(".pink");
     var red = $(".red");
     var white = $(".white");
-//Was going to create for loop, but since each image and crystal are different, I will assign each individual variable its on individual index.
+//Was going to create for loop, but since each image and crystal are different, I will assign each individual variable its on individual index. No need to assign class to each variable, since the id for each one is attached to the already existing default bootstrap button class btn btn-default.
+green.attr("data-crystalValue", randomValues[0]);
+pink.attr("data-crystalValue", randomValues[1]);
+red.attr("data-crystalValue", randomValues[2]);
+white.attr("data-crystalValue", randomValues[3]);
 
 
 
