--- a/index.html
+++ b/index.html
@@ -136,16 +136,17 @@ if (randomValues.indexOf(crystalValue) < 0) {
     }
 }
 //Created variable for each button, and set each variable to create an image of the respective crystal. Took away the links in the buttons, but will reference each button and append with the id of that button.
-    var green = $(".green");
-    var pink = $(".pink");
-    var red = $(".red");
-    var white = $(".white");
+//Decided to leave button links for images, and take away the id reference for each varaible because it was being done incorrectly. 
+    var green;
+    var pink;
+    var red;
+    var white;
 //Was going to create for loop, but since each image and crystal are different, I will assign each individual variable its on individual index. No need to assign class to each variable, since the id for each one is attached to the already existing default bootstrap button class btn btn-default.
 green.attr("data-crystalValue", randomValues[0]);
 pink.attr("data-crystalValue", randomValues[1]);
 red.attr("data-crystalValue", randomValues[2]);
 white.attr("data-crystalValue", randomValues[3]);
-
+//Going to now add each crystal variable to and all its attributes to the respective id 
 
 
 console.log(randomValues)
