hit eureka momentgit add .! on click function is working perfectly, tested with console log. liked score variable to player score id to be displayed in the your score card. going to do the same for wins and loses, after creating variable for wins and loses.

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 $(document).ready(function() {
 //Created variable for the user's score
 var score = 0;
+document.getElementById("player-score").innerHTML = score;
 
 //Created varaible for randomNumber to be displayed
 var randomNumber = Math.floor((Math.random()*120)+19);
@@ -149,7 +150,7 @@ var white = document.getElementById("white").setAttribute("data-realcrystalvalue
 $(".buttons").on("click", function(){
     var realCrystalValue = ($(this).attr("data-realcrystalvalue"));
     realCrystalValue = parseInt(realCrystalValue);
-    console.log("itworks")
+    console.log(realCrystalValue)
 })
 
 
