Added dom manipulation to the start function and got it to work. Got wins to add up.

--- a/index.html
+++ b/index.html
@@ -112,14 +112,6 @@
 <script type="text/javascript">
 //CODE FOR RANDOM NUMBER GENERATOR / DISPLAY
 
-//created start game function
-function startGame() {
-    //Reseting the score to zero
-    score = 0;
-    //
-
-}
-
 $(document).ready(function() {
 //Created variables to store the the number of wins and loses and then linked them to the respective id's to be displayed in the HTML.
 var wins = 0;
@@ -169,18 +161,22 @@ $(".buttons").on("click", function(){
     score += realCrystalValue;
     document.getElementById("player-score").innerHTML = score;
     //Going to now put in if statements for the conditions of the game. 
-    if (score === randomNumber)
+    if (score === randomNumber){
     alert("You win!");
     wins ++;
-    })
+    document.getElementById("wins").innerHTML = wins;
+    startGame();
+    }})
 });
 
 //created start game function
 function startGame() {
     //Reseting the score to zero
     score = 0;
+    document.getElementById("player-score").innerHTML = score;
     //Reseting random number
     randomNumber = Math.floor((Math.random()*120)+19);
+    document.getElementById("random-number").innerHTML = randomNumber;
 }
 
 
