Finished everything, just when game is reset, it will immediately go to you lose at the first click of a button. Working on that now

--- a/index.html
+++ b/index.html
@@ -166,7 +166,14 @@ $(".buttons").on("click", function(){
     wins ++;
     document.getElementById("wins").innerHTML = wins;
     startGame();
-    }})
+    }
+    else if(score > randomNumber){
+    alert("You Lose!");
+    loses ++;
+    document.getElementById("loses").innerHTML = loses;
+    startGame();
+    }
+    })
 });
 
 //created start game function
